--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -1,13 +1,17 @@
 {
-  "Sign in": "Войти",
-  "Sign up": "Зарегистрироваться",
-  "Email": "Электронная почта",
-  "Password": "Пароль",
-  "Confirm Password": "Подтвердить пароль",
-  "Submit": "Отправить",
-  "You are already registered": "Вы уже зарегистрированы",
-  "Enter you email and password to Sing Up": "Введите свой адрес электронной почты и пароль, чтобы зарегистрироваться",
-  "Uladzimir Milasheuski": "Владимир Милашевский",
-  "Yevhenii Orhanistyi": "Евгений Орханистый",
-  "Stanislav Goloborodov": "Станислав Голобородов"
+  "Sign in": "Sign in",
+  "Sign up": "Sign up",
+  "Sign out": "Sign out",
+  "Email": "Email",
+  "Password": "Password",
+  "Confirm Password": "Confirm Password",
+  "Submit": "Submit",
+  "You are already registered": "You are already registered",
+  "Enter you email and password to Sing Up": "Enter you email and password to Sing Up",
+  "Uladzimir Milasheuski": "Uladzimir Milasheuski",
+  "Yevhenii Orhanistyi": "Yevhenii Orhanistyi",
+  "Stanislav Goloborodov": "Stanislav Goloborodov",
+  "Language": "Language",
+  "en": "English",
+  "ru": "Русский"
 }
