feat: add translation

--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -1,13 +1,29 @@
 {
+  "Sign In": "Sign In",
+  "Sign Up": "Sign Up",
+  "Sign Out": "Sign Out",
+  "Email:": "Email:",
+  "Password:": "Password:",
+  "Confirm Password:": "Confirm Password:",
+  "Submit": "Submit",
+  "Please": "Please",
   "Sign in": "Sign in",
   "Sign up": "Sign up",
-  "Sign out": "Sign out",
-  "Email": "Email",
-  "Password": "Password",
-  "Confirm Password": "Confirm Password",
-  "Submit": "Submit",
-  "You are already registered": "You are already registered",
+  "You are already registered?": "You are already registered?",
+  "Enter email and password to Sign In": "Enter email and password to Sign In",
   "Enter you email and password to Sing Up": "Enter you email and password to Sing Up",
+  "Please enter e-mail in valid format": "Please enter e-mail in valid format",
+  "Please enter password": "Please enter password",
+  "Password should be more than 8 characters": "Password should be more than 8 characters",
+  "Password is not strong enough. Please use a stronger one": "Password is not strong enough. Please use a stronger one",
+  "Password should be less than 32 characters": "Password should be less than 32 characters",
+  "Password should contain at least 1 uppercase letter": "Password should contain at least 1 uppercase letter",
+  "Password should contain at least 1 lowercase letter": "Password should contain at least 1 lowercase letter",
+  "Password should contain at least 1 number": "Password should contain at least 1 number",
+  "Password should contain at least 1 special character": "Password should contain at least 1 special character",
+  "Please repeat the password": "Please repeat the password",
+  "Passwords do not match. Please try again": "Passwords do not match. Please try again",
+  "Please enter e-mail": "Please enter e-mail",
   "Uladzimir Milasheuski": "Uladzimir Milasheuski",
   "Yevhenii Orhanistyi": "Yevhenii Orhanistyi",
   "Stanislav Goloborodov": "Stanislav Goloborodov",
