--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -1,13 +1,29 @@
 {
-  "Sign in": "Войти",
-  "Sign up": "Зарегистрироваться",
-  "Sign out": "Выйти",
-  "Email": "Электронная почта",
-  "Password": "Пароль",
-  "Confirm Password": "Подтвердить пароль",
+  "Sign In": "Войти",
+  "Sign Up": "Зарегистрироваться",
+  "Sign Out": "Выйти",
+  "Email:": "Электронная почта:",
+  "Password:": "Пароль:",
+  "Confirm Password:": "Подтвердить пароль:",
   "Submit": "Отправить",
-  "You are already registered": "Вы уже зарегистрированы",
+  "Please": "Пожалуйста",
+  "Sign in": "Войдите",
+  "Sign up": "Зарегистрируйтесь",
+  "You are already registered?": "Вы уже зарегистрированы?",
+  "Enter email and password to Sign In": "Введите адрес электронной почты и пароль для входа",
   "Enter you email and password to Sing Up": "Введите свой адрес электронной почты и пароль, чтобы зарегистрироваться",
+  "Please enter e-mail in valid format": "Пожалуйста, введите адрес электронной почты в допустимом формате",
+  "Please enter password": "Пожалуйста, введите пароль",
+  "Password should be more than 8 characters": "Пароль должен содержать более 8 символов",
+  "Password is not strong enough. Please use a stronger one": "Пароль недостаточно надежный. Пожалуйста, используйте более сильный",
+  "Password should be less than 32 characters": "Пароль должен быть менее 32 символов",
+  "Password should contain at least 1 uppercase letter": "Пароль должен содержать хотя бы 1 заглавную букву",
+  "Password should contain at least 1 lowercase letter": "Пароль должен содержать хотя бы 1 строчную букву",
+  "Password should contain at least 1 number": "Пароль должен содержать хотя бы 1 цифру",
+  "Password should contain at least 1 special character": "Пароль должен содержать хотя бы 1 специальный символ",
+  "Please repeat the password": "Пожалуйста, повторите пароль",
+  "Passwords do not match. Please try again": "Пароли не совпадают. Пожалуйста, попробуйте еще раз",
+  "Please enter e-mail": "Пожалуйста, введите адрес электронной почты",
   "Uladzimir Milasheuski": "Владимир Милашевский",
   "Yevhenii Orhanistyi": "Евгений Орханистый",
   "Stanislav Goloborodov": "Станислав Голобородов",
