fix: fix scss form forms

--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -11,7 +11,7 @@
   "Sign up": "Sign up",
   "You are already registered?": "You are already registered?",
   "Enter email and password to Sign In": "Enter email and password to Sign In",
-  "Enter you email and password to Sing Up": "Enter you email and password to Sing Up",
+  "Enter email and password to Sign Up": "Enter email and password to Sign Up",
   "Please enter e-mail in valid format": "Please enter e-mail in valid format",
   "Please enter password": "Please enter password",
   "Password should be more than 8 characters": "Password should be more than 8 characters",
