--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -7,11 +7,11 @@
   "Confirm Password:": "Подтвердить пароль:",
   "Submit": "Отправить",
   "Please": "Пожалуйста",
-  "Sign in": "Войдите",
-  "Sign up": "Зарегистрируйтесь",
+  "Sign in": "войдите",
+  "Sign up": "зарегистрируйтесь",
   "You are already registered?": "Вы уже зарегистрированы?",
   "Enter email and password to Sign In": "Введите адрес электронной почты и пароль для входа",
-  "Enter you email and password to Sing Up": "Введите свой адрес электронной почты и пароль, чтобы зарегистрироваться",
+  "Enter email and password to Sign Up": "Введите адрес электронной почты и пароль, чтобы зарегистрироваться",
   "Please enter e-mail in valid format": "Пожалуйста, введите адрес электронной почты в допустимом формате",
   "Please enter password": "Пожалуйста, введите пароль",
   "Password should be more than 8 characters": "Пароль должен содержать более 8 символов",
