fix: fix errors language

--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -25,7 +25,7 @@
   "Passwords do not match. Please try again": "Пароли не совпадают. Пожалуйста, попробуйте еще раз",
   "Please enter e-mail": "Пожалуйста, введите адрес электронной почты",
   "Uladzimir Milasheuski": "Владимир Милашевский",
-  "Yevhenii Orhanistyi": "Евгений Орханистый",
+  "Yevhenii Orhanistyi": "Евгений Органистый",
   "Stanislav Goloborodov": "Станислав Голобородов",
   "Language": "Язык",
   "en": "English",
