--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -7,6 +7,7 @@
   "Confirm Password:": "Confirm Password:",
   "Submit": "Submit",
   "Please": "Please",
+  "Playground": "Playground",
   "Sign in": "Sign in",
   "Sign up": "Sign up",
   "You are already registered?": "You are already registered?",
