--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -7,6 +7,7 @@
   "Confirm Password:": "Подтвердить пароль:",
   "Submit": "Отправить",
   "Please": "Пожалуйста",
+  "Playground": "Тестовая площадка",
   "Sign in": "войдите",
   "Sign up": "зарегистрируйтесь",
   "You are already registered?": "Вы уже зарегистрированы?",
