fix: fixed translate

--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -33,7 +33,7 @@
   "ru": "Русский",
   "Welcome to GraphiQL Playground!": "Добро пожаловать на игровую площадку GraphiQL!",
   "Discover the features of our platform, a robust tool crafted for executing and refining your GraphQL queries. Easily interact with your GraphQL API, create queries, and analyzethe responses - all in one place. Maximize this space for developing and fine-tuning your queries.": "Откройте для себя возможности нашей платформы, надежного инструмента, созданного для выполнения и уточнения ваших запросов GraphQL. Легко взаимодействуйте с API GraphQL, создавайте запросы и анализируйте ответы — и все это в одном месте. Максимизируйте это пространство для разработки и тонкой настройки. ваши запросы.",
-  "Go to Playground page": "Go to Playground page",
+  "Go to Playground page": "Перейти на страницу тестовой площадки",
   "Go to Auth page": "Перейти на страницу аутентификации",
   "Main Features": "Основные характеристики",
   "Now, you can dive into the rich capabilities that set our application apart. The following features embody the essence of our commitment to delivering an exceptional user experience.": "Теперь вы можете погрузиться в богатые возможности, которые выделяют наше приложение. Следующие функции воплощают суть нашего стремления обеспечить исключительный пользовательский опыт",
