--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -55,5 +55,6 @@
   "Stanislav, an excellent example of a team player, but is also capable of working alone. He is detail-oriented, very hard-working and has extensive technical knowledge, while always being open to learning new tools and technologies.": "Станислав — отличный пример командного игрока, но способен работать и в одиночку. Он внимателен к деталям, очень трудолюбив и обладает обширными техническими знаниями, но при этом всегда открыт для изучения новых инструментов и технологий.",
   "Uladzimir is web developer with excellent communication skills  shows an outstanding ability to adapt to new technologies, which makes it an ideal candidate for projects that require implementation of new solutions.": "Владимир — веб-разработчик с отличными коммуникативными навыками, демонстрирует выдающуюся способность адаптироваться к новым технологиям, что делает его идеальным кандидатом для проектов, требующих внедрения новых решений.",
   "Yevhenii is a passionate web developer, dedicated to delivering top-notch solutions that prioritize user experience, architectural soundness, and code quality. His multifaceted approach  makes him an asset to any project or team.": "Евгений — страстный веб-разработчик, стремящийся предоставлять первоклассные решения, в которых приоритет отдается пользовательскому опыту, архитектурной надежности и качеству кода. Его многогранный подход делает его ценным активом для любого проекта или команды.",
-  "Send": "Отправить"
+  "Send": "Отправить",
+  "Enter text here...": "Введите текст здесь..."
 }
