--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -63,5 +63,8 @@
   "No fields":"No fields",
   "Type": "Type",
   "Arguments": "Arguments",
-  "Endpoint": "Endpoint"
+  "Endpoint": "Endpoint",
+  "Section": "Section",
+  "Schema description": "GraphQL Docs is a tool that generates comprehensive documentation for GraphQL APIs. It automatically generates documentation from GraphQL schemas, offering insights into available queries, mutations, types, and their relationships.",
+  "Root Types": "Root Types"
 }
