--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -63,5 +63,8 @@
   "No fields":"Нет полей",
   "Type": "Тип",
   "Arguments": "Аргументы",
-  "Endpoint": "Адрес"
+  "Endpoint": "Адрес",
+  "Section": "Раздел",
+  "Schema description": "Документация GraphQL - это инструмент, который генерирует документацию о GraphQL API. Он автоматически генерирует документацию на основе схем GraphQL, предлагая информацию о доступных запросах, мутациях, типах и их взаимосвязях.",
+  "Root Types": "Типы запросов"
 }
