--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -68,6 +68,7 @@
   "Section": "Раздел",
   "Schema description": "Документация GraphQL - это инструмент, который генерирует документацию о GraphQL API. Он автоматически генерирует документацию на основе схем GraphQL, предлагая информацию о доступных запросах, мутациях, типах и их взаимосвязях.",
   "Root Types": "Типы запросов",
+  "invalid endpoint": "Неверный адрес",
   "auth/app-not-authorized":
     "Это приложение, определяемое доменом, в котором оно размещено, не имеет прав на использование проверки подлинности Firebase с указанным ключом API. Проверьте конфигурацию ключа в консоли Google API.",
   "auth/credential-already-in-use": "Эти учетные данные уже связаны с другим пользователем.",
