--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -66,5 +66,7 @@
   "Endpoint": "Адрес",
   "Section": "Раздел",
   "Schema description": "Документация GraphQL - это инструмент, который генерирует документацию о GraphQL API. Он автоматически генерирует документацию на основе схем GraphQL, предлагая информацию о доступных запросах, мутациях, типах и их взаимосвязях.",
-  "Root Types": "Типы запросов"
+  "Root Types": "Типы запросов",
+  "This page not found": "Страница не найдена",
+  "Home": "Домой"
 }
