feat: add Variables and Headers TextArea

--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -57,6 +57,8 @@
   "Yevhenii is a passionate web developer, dedicated to delivering top-notch solutions that prioritize user experience, architectural soundness, and code quality. His multifaceted approach  makes him an asset to any project or team.": "Yevhenii is a passionate web developer, dedicated to delivering top-notch solutions that prioritize user experience, architectural soundness, and code quality. His multifaceted approach  makes him an asset to any project or team.",
   "Send": "Send",
   "Enter code here...": "Enter code here...",
+  "Enter variables here...": "Enter variables here...",
+  "Enter headers here...": "Enter headers here...",
   "GraphQL Docs": "GraphQL Docs",
   "No type name found": "No type name found",
   "No GraphQL schema": "No GraphQL schema",
