feat: add prepareQuery for TextArea in Tabs

--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -70,6 +70,8 @@
   "Type": "Тип",
   "Arguments": "Аргументы",
   "Endpoint": "Адрес",
+  "Variables": "Переменные",
+  "Headers": "Заголовки",
   "Show Docs": "Документация",
   "Section": "Раздел",
   "Schema description": "Документация GraphQL - это инструмент, который генерирует документацию о GraphQL API. Он автоматически генерирует документацию на основе схем GraphQL, предлагая информацию о доступных запросах, мутациях, типах и их взаимосвязях.",
