--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -70,6 +70,8 @@
   "Type": "Type",
   "Arguments": "Arguments",
   "Endpoint": "Endpoint",
+  "Variables": "Variables",
+  "Headers": "Headers",
   "Show Docs": "Show Docs",
   "Section": "Section",
   "Schema description": "GraphQL Docs is a tool that generates comprehensive documentation for GraphQL APIs. It automatically generates documentation from GraphQL schemas, offering insights into available queries, mutations, types, and their relationships.",
