refactor: minor styles refactor

--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -159,5 +159,6 @@
   "auth/user-mismatch": "Предоставленные учетные данные не соответствуют ранее зарегистрированному пользователю.",
   "auth/user-signed-out": "",
   "auth/weak-password": "Пароль должен содержать не менее 6 символов.",
-  "auth/web-storage-unsupported": "Этот браузер не поддерживается или сторонние файлы cookie и данные могут быть отключены."
+  "auth/web-storage-unsupported": "Этот браузер не поддерживается или сторонние файлы cookie и данные могут быть отключены.",
+  "Show Error": "Показать ошибку"
 }
