--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -162,5 +162,6 @@
   "auth/user-mismatch": "The supplied credentials do not correspond to the previously signed in user.",
   "auth/user-signed-out": "",
   "auth/weak-password": "The password must be 6 characters long or more.",
-  "auth/web-storage-unsupported": "This browser is not supported or 3rd party cookies and data may be disabled."
+  "auth/web-storage-unsupported": "This browser is not supported or 3rd party cookies and data may be disabled.",
+  "Show Error": "Show Error"
 }
